Fixes card spacing

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ body {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   text-size-adjust: 100%;
+  overflow: hidden;
 }
 
 .container {
